--- a/tasks-manager/src/components/task-control/task-table/TaskTable.css
+++ b/tasks-manager/src/components/task-control/task-table/TaskTable.css
@@ -1,4 +1,30 @@
 
 .table__container{
-    padding-top: 3rem;
+    padding-top: 5rem;
+    max-width: 800px;
+}
+
+/* span[class^="priority"] {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+}
+ */
+/* .priority {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+} */
+
+
+tr td:nth-child(6) {
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+.priority-text {
+    margin: 0 auto;
 }
