se agrega componente task-control con estilos bootstrap

--- a/Modelo-Interfaz/src/components/pages/TaskTable.css
+++ b/Modelo-Interfaz/src/components/pages/TaskTable.css
@@ -10,7 +10,7 @@
     padding-left: 8cm;
 }
 
-{/*
+/*
 tr
 {
 display: flex;
@@ -19,4 +19,4 @@ padding: 10px 20px;
 color: #fff;
 margin: 5px 0;
 transition: 0.5s;
-} */}
+} */
