--- a/Modelo-Interfaz/src/components/pages/Products.css
+++ b/Modelo-Interfaz/src/components/pages/Products.css
@@ -32,15 +32,22 @@
   }
   
   .products__container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+   /*  position: absolute; */
+    width: 60vw;
+    height: 800PX;
     text-align: center;
+ /*    background-color: red; */
   }
   
   .products__container button {
     position: relative;
     top: 40%;
+  }
+
+  .form-groups {
+  /*   background-color: red;
+    display: flex;
+    flex-direction: column; */
   }
   
   
