--- a/Modelo-Interfaz/src/components/pages/TaskControl.css
+++ b/Modelo-Interfaz/src/components/pages/TaskControl.css
@@ -1,4 +1,4 @@
-
+/* 
 .taskControl__container {
 
     margin-top: 4rem;
@@ -24,4 +24,54 @@
 .add-task {
     width: 300px;
     justify-self: center;
+} */
+
+
+
+
+.taskControl__container {
+    
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+    place-content: center;
+    margin-bottom: 5rem;
+    max-width: 85%;
+    margin: 0 auto;
+    
 }
+
+.taskControl__title {
+   /*  width: 500px; */
+   grid-column: 1 / -1;
+    margin: 0 auto;
+    font-size: 4rem;
+    margin-bottom: 2rem;
+}
+
+.taskControl__manage {
+    grid-column: 1 / -1;
+}
+
+.taskControl__table {
+    grid-column: 1 / 2;
+}
+
+.taskControl__calendar {
+    grid-column: 2 / -1;
+    padding-top: 3rem;
+    display: flex;
+    justify-content: center;
+
+}
+
+
+@media screen and (max-width: 700px) {
+
+    .taskControl__container {
+
+    }
+
+}
+
