--- a/Modelo-Interfaz/src/components/pages/TaskControl.css
+++ b/Modelo-Interfaz/src/components/pages/TaskControl.css
@@ -1,57 +1,28 @@
-/* 
-.taskControl__container {
-
-    margin-top: 4rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3rem;
-    
-}
-
-.taskControl__title {
-    width: 500px;
-    margin: 0 auto;
-    font-size: 4rem;
-    margin-bottom: 2rem;
-    grid-column: span 2;
-}
-
-.taskControl__search {
-    width: 50vw;
-    justify-self: end;
-}
-
-.add-task {
-    width: 300px;
-    justify-self: center;
-} */
-
-
-
 
 .taskControl__container {
     
     margin-top: 4rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+/*     display: grid; */
+    grid-template-columns: 1fr 350px;
     gap: 4rem;
     place-content: center;
     margin-bottom: 5rem;
     max-width: 85%;
     margin: 0 auto;
-    padding-bottom: 7rem;
+    background-color: whitesmoke;
+    padding: 2rem 1rem 7rem 1rem;
 }
 
 .taskControl__title {
    /*  width: 500px; */
-   grid-column: 1 / -1;
+   grid-column: 1 / 3;
     margin: 0 auto;
     font-size: 4rem;
     margin-bottom: 2rem;
 }
 
 .taskControl__manage {
-    grid-column: 1 / -1;
+    grid-column: 1 / 3;
 }
 
 .taskControl__table {
@@ -67,10 +38,11 @@
 }
 
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 1300px) {
 
     .taskControl__container {
-
+        display: grid;
+           grid-template-columns: 1fr;
     }
 
 }
