--- a/Modelo-Interfaz/src/components/task-control-components/task-table/TaskTable.css
+++ b/Modelo-Interfaz/src/components/task-control-components/task-table/TaskTable.css
@@ -1,3 +1,7 @@
+.table__container {
+  overflow-x: auto;
+}
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -8,6 +12,10 @@ table {
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
+  }
+
+  th {
+    color: white;
   }
   
   tr {
