--- a/Modelo-Interfaz/src/components/pages/TaskControl.css
+++ b/Modelo-Interfaz/src/components/pages/TaskControl.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 
 .taskControl__container {
     
@@ -19,6 +21,12 @@
     margin: 0 auto;
     font-size: 4rem;
     margin-bottom: 2rem;
+    font-family: 'Poppins', sans-serif;
+
+    font-size: 72px;
+  background: -webkit-linear-gradient( #004225, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .taskControl__manage {
